# organon-noumenon--ontogenetic-morphe

./: .gitignore  CHANGELOG.md  CLAUDE.md  GEMINI.md  README.md  ecosystem.yaml  pyproject.toml  seed.yaml
.github/workflows/: ci.yml
.serena/: project.yml
docs/adr/: 001-initial-architecture.md  002-integration-patterns.md
docs/pitch/: index.html
examples/: basic_narrative_interpretation.py  conflict_resolution_demo.py  full_system_demo.py  recursive_process_demo.py  value_exchange_demo.py
specs/: AcademiaManager.md  AnthologyManager.md  ArbitrationEngine.md  ArchiveManager.md  AudienceClassifier.md  BlockchainSimulator.md  CodeGenerator.md  ConflictResolver.md  ConsumptionManager.md  EchoHandler.md  EvolutionScheduler.md  LocationResolver.md  MaskGenerator.md  NodeRouter.md  ProcessConverter.md  ProcessMonetizer.md  ReferenceManager.md  RuleCompiler.md  SignalThresholdGuard.md  SymbolicInterpreter.md  TimeManager.md  ValueExchangeManager.md
src/autogenrec/: __init__.py
src/autogenrec/bus/: __init__.py  message_bus.py  topics.py
src/autogenrec/core/: __init__.py  process.py  registry.py  signals.py  subsystem.py  symbolic.py
src/autogenrec/runtime/: __init__.py  __main__.py  orchestrator.py
src/autogenrec/storage/: __init__.py
src/autogenrec/subsystems/: __init__.py
src/autogenrec/subsystems/academic/: __init__.py  academia_manager.py
src/autogenrec/subsystems/conflict/: __init__.py  arbitration_engine.py  conflict_resolver.py
tests/: __init__.py  test_academic.py  test_conflict.py  test_core.py  test_core_processing.py  test_data_infrastructure.py  test_identity.py  test_integration.py  test_routing.py  test_subsystem.py  test_temporal.py  test_transformation.py  test_value.py
(+27 files in other folders)
